gccida/g1/maybe_eliminate_biv
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv/src/loop.c:8969:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = ( rtx)last[2]; 
           ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv/src/loop.c:8972:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)v8->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv/src/loop.c:9008:23: error: use of undeclared identifier 'off_6E0C7E'
v16 = ( const char *)&off_6E0C7E; 
                      ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/maybe_eliminate_biv/src/obj/loop.o] Error 1
